--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "jest": "^28.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "dependencies": {
+    "mathjs": "^10.6.4"
+  },
+  "type": "module"
 }
