--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,15 @@
         "es2021": true,
         "jest": true
     },
-    "preset": "airbnb",
+    "extends": [
+        "airbnb-base"
+    ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
+        "import/extensions": 0,
+        "no-param-reassign": 0
     }
 }
