--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
     "@babel/preset-env": "^7.18.2",
     "babel": "^6.23.0",
     "babel-jest": "^28.1.1",
+    "core-js": "^3.23.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^28.1.1",
